Re-ecriture de la description de GKTL (#5); Commentaire sur l'influence de la perturbation des clones pour AMS et GKTL (#6); References pour algo. similaires a GKTL (#3)

--- a/biblio.bib
+++ b/biblio.bib
@@ -466,6 +466,12 @@ month={Nov},}
   year={2002},
   publisher={Elsevier}
 }
+@article{grassberger1998perm,
+  title={PERM: a Monte Carlo strategy for simulating polymers and other things},
+  author={Grassberger, Peter and others},
+  journal={arXiv preprint cond-mat/9806321},
+  year={1998}
+}
 @article{garrahan2007dynamical,
   title={Dynamical first-order phase transition in kinetically constrained models of glasses},
   author={Garrahan, Juan P and Jack, Robert L and Lecomte, Vivien and Pitard, Estelle and van Duijvendijk, Kristina and van Wijland, Fr{\'e}d{\'e}ric},
@@ -527,6 +533,20 @@ month={Nov},}
   pages={062123},
   year={2016},
   publisher={APS}
+}
+@article{PhysRevLett.118.115702,
+  title = {Finite-Size Scaling of a First-Order Dynamical Phase Transition: Adaptive Population Dynamics and an Effective Model},
+  author = {Nemoto, Takahiro and Jack, Robert L. and Lecomte, Vivien},
+  journal = {Phys. Rev. Lett.},
+  volume = {118},
+  issue = {11},
+  pages = {115702},
+  numpages = {6},
+  year = {2017},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.118.115702},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.118.115702}
 }
 
 @article{Guevara_Hidalgo_2018,
@@ -634,4 +654,14 @@ year = {2006},
   pages={043108},
   year={2019},
   publisher={AIP Publishing}
+}
+@article{intro_DMC_kosztin,
+author = {Kosztin,Ioan  and Faber,Byron  and Schulten,Klaus },
+title = {Introduction to the diffusion Monte Carlo method},
+journal = {American Journal of Physics},
+volume = {64},
+number = {5},
+pages = {633-644},
+year = {1996},
+doi = {10.1119/1.18168},
 }
