Add figur timeseries_extrms_AVG

--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -507,8 +507,8 @@ This is consistent with an increase of $\overline{\gamma}$ acting as a precursor
 
 \begin{figure}
 	\centering
-	%\includegraphics[width=\linewidth]{timeseries_extrms_AVG/timeseries_extrms_AVG}
-	\caption{Instantaneous drag signals $f_d(t)$ corresponding to the highest fluctuations of the time-averaged drag $F_T$ with averaging period $T=10~\tau_c$ and $\tau_c$ being the correlation time of the drag. $\sigma_T$ denotes the standard deviation of $F_T$. \EL{FIGURE IS MISSING} \TL{Addressed in issue \#9}}
+	\includegraphics[width=\linewidth]{timeseries_extrms_AVG/timeseries_extrms_AVG}
+	\caption{\TL{Instantaneous drag signals $f_d(t)$ corresponding to the highest fluctuations of the time-averaged drag $F_T$ observed in a control timeseries $\{F_T(t)\}_{0 \leq t \leq T_{tot}-T}$ with $T_{Tot} = 10^6\tau_c$ and $T = 10 \tau_c$. Here $\tilde{f}_d$ denotes the zero-mean, unit variance instantaneous drag.}}
 	\label{fig:extreme_avg}
 \end{figure}
 
@@ -537,7 +537,7 @@ It is thus legitimate to ask whether a large value of the averaged drag results 
 %
 The averaged drag signal $\{F_T(t)\}_{0 \leq t \leq T_{tot}-T}$ is obtained straightforwardly by filtering in time the instantaneous drag signal $f_d(t)$. 
 In the same way as in section \ref{sec:extreme_extraction}, one can identify extreme fluctuations of $F_T$ exceeding some fixed threshold $a$ and sample a set of extreme events.
-By taking $a=5.2~\sigma _T$  with $\sigma_T$ being the standard deviation of the fluctuations of $F_T$, $84$ independent extreme events have been selected.
+By taking $a=5.2~\sigma_T$  with $\sigma_T$ being the standard deviation of the fluctuations of $F_T$, $84$ independent extreme events have been selected.
 
 
 % neither case (1) nor case (2)
