Make colors for commands TL and EL less aggressive

--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -76,9 +76,10 @@
 	long=Computational Fluid Dynamics,
 }
 
-
-\newcommand{\EL}[1]{{\color{red}{#1}}}
-\newcommand{\TL}[1]{{\color{green}{#1}}}
+\definecolor{myred}{HTML}{b30000}
+\definecolor{mygreen}{HTML}{008000}
+\newcommand{\EL}[1]{{\color{myred}{#1}}}
+\newcommand{\TL}[1]{{\color{mygreen}{#1}}}
 
 \begin{document}
 	
